add xfce4 clipmenu

--- a/airootfs/etc/skel/.mozilla/firefox/o5fxm5c8.default-release/chrome/userChrome.css
+++ b/airootfs/etc/skel/.mozilla/firefox/o5fxm5c8.default-release/chrome/userChrome.css
@@ -22,3 +22,7 @@
     max-height: var(--tab-max-height) !important;
   }
 } /* end media query */
+
+#tabbrowser-tabs:not([secondarytext-unsupported]) .tab-label-container {
+  height: 2.7em;
+}
