--- a/airootfs/etc/skel/.mozilla/firefox/o5fxm5c8.default-release/chrome/userChrome.css
+++ b/airootfs/etc/skel/.mozilla/firefox/o5fxm5c8.default-release/chrome/userChrome.css
@@ -24,5 +24,5 @@
 } /* end media query */
 
 #tabbrowser-tabs:not([secondarytext-unsupported]) .tab-label-container {
-  height: 2.7em;
+  height: unset !important;
 }
